{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 643,
  "lineage": "163cb1c2-6543-7375-1b37-4e96d4f9d04d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ion-Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-074543d9faf9c0509",
            "arn": "arn:aws:ec2:eu-central-1:877558872703:instance/i-01c570ccff7755198",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c570ccff7755198",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0588c99d8fe426b73",
            "private_dns": "ip-10-100-50-41.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.50.41",
            "public_ip": "3.120.172.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d172ae45978963a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050e8adc27697b6c1",
            "tags": {
              "project": "ION"
            },
            "tags_all": {
              "project": "ION"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6577306233da113"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.Ion_SG",
            "aws_subnet.Ion_Public_Subnet",
            "aws_vpc.Ion_VPC",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Ion_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:877558872703:internet-gateway/igw-0d0257c8953ba44ec",
            "id": "igw-0d0257c8953ba44ec",
            "owner_id": "877558872703",
            "tags": {
              "project": "ION"
            },
            "tags_all": {
              "project": "ION"
            },
            "vpc_id": "vpc-0491e09beec0200a7"
          },
          "dependencies": [
            "aws_vpc.Ion_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Ion_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d0257c8953ba44ec",
            "id": "r-rtb-004d67dd1036694581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-004d67dd103669458",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Ion_IGW",
            "aws_route_table.Ion_RT",
            "aws_vpc.Ion_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Ion_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:877558872703:route-table/rtb-004d67dd103669458",
            "id": "rtb-004d67dd103669458",
            "owner_id": "877558872703",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "project": "ION"
            },
            "tags_all": {
              "project": "ION"
            },
            "timeouts": null,
            "vpc_id": "vpc-0491e09beec0200a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Ion_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Ion_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06943ab9f11d684e2",
            "route_table_id": "rtb-004d67dd103669458",
            "subnet_id": "subnet-050e8adc27697b6c1"
          },
          "dependencies": [
            "aws_route_table.Ion_RT",
            "aws_subnet.Ion_Public_Subnet",
            "aws_vpc.Ion_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Ion_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:877558872703:security-group/sg-0e6577306233da113",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6577306233da113",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Ion_SG",
            "name_prefix": "",
            "owner_id": "877558872703",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "ION"
            },
            "tags_all": {
              "project": "ION"
            },
            "timeouts": null,
            "vpc_id": "vpc-0491e09beec0200a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Ion_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Ion_Public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:877558872703:subnet/subnet-050e8adc27697b6c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.100.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050e8adc27697b6c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "877558872703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "project": "ION"
            },
            "tags_all": {
              "project": "ION"
            },
            "vpc_id": "vpc-0491e09beec0200a7"
          },
          "dependencies": [
            "aws_vpc.Ion_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Ion_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:877558872703:vpc/vpc-0491e09beec0200a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0a6ccec12f1b12284",
            "default_route_table_id": "rtb-0d148407afde96d80",
            "default_security_group_id": "sg-0d15c926f0a74f24d",
            "dhcp_options_id": "dopt-0d0bc53cf3eb138e0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0491e09beec0200a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d148407afde96d80",
            "owner_id": "877558872703",
            "tags": {
              "project": "ION"
            },
            "tags_all": {
              "project": "ION"
            }
          }
        }
      ]
    }
  ]
}